# lus-rosscripts

./: Back2Zero.py  BasisFunc1  BasisFunc2  BendJ2J6.py  BendJ2J6_T.py  BendJ4.py  BendJ4_T.py  CMakeLists.txt  Drive_vehicle.py  FKsolver_Koop.py  FKtest.py  IKtest.py  KoopmanOperator.py  LQR_Tinf.py  LQcostfunc.py  Move_T.py  Move_to_dot.py  README.md  SAC.py  figure8.cpp  record.sh  traj_tracking.py  traj_tracking_position_control.py  wave_demo.py
